fix vertical spacings

--- a/wp-content/themes/sixgill/less/mobile_portrait_landscape_products.less
+++ b/wp-content/themes/sixgill/less/mobile_portrait_landscape_products.less
@@ -42,13 +42,13 @@
 				font-family: "Lato";
 				letter-spacing: 1.5px;
 				line-height: 1em;
-				margin-bottom: 2vw;
+				margin-bottom: 5.5vh;
 			}
 
 			&-text {
 				width: 88.6%;
-				margin-top: 12.66vw;
-				margin-bottom: 14.22vw;
+				margin-top: 8.4vh;
+				margin-bottom: 9.4vh;
 				text-align: left;
 
 				&, & p, & li {
@@ -61,13 +61,13 @@
 
 	&-second-section {
 		background-image: url('/wp-content/themes/sixgill/images/products/single_dot.png');
-		padding-top: 12vw;
+		padding-top: 8vh;
 
 		&-image {
 
 			&-wrapper {
 				width: 81.1vw;
-				margin-bottom: 12.8vw;
+				margin-bottom: 8.5vh;
 				margin-left: auto;
 				margin-right: auto;
 				width: 88.75vw;
@@ -136,7 +136,7 @@
 		}
 
 		&-line {
-			margin: 3vw 0px 3vw 0px;
+			margin: 3vh 0px 3vh 0px;
 			height: 2.5px;
 			width: 88.75vw;
 			display: block;
@@ -181,7 +181,7 @@
 		&-header-wrapper {
 			display: inline-block;
 			text-align: center;
-			padding-top: 12.34vw;
+			padding-top: 8vh;
 		}
 
 		&-title {
@@ -237,7 +237,7 @@
 
 		&-right-col {
 			width: 41%;
-			padding: 8vw 4.75vw 0px 7.7vw;
+			padding: 4.5vh 4.75vw 0px 7.7vw;
 		}
 	}
 
@@ -333,7 +333,7 @@
 			font-family: "Lato";
 		  text-align: center;
 			margin-bottom: 0px;
-			margin-top: 10vw;
+			margin-top: 7.8vh;
 		}
 
 		&-col {
@@ -341,7 +341,7 @@
 			&-title {
 				font-size: 24px;
 			  font-weight: 500;
-				margin: 2.74vw 0px 6.1vw 0px;
+				margin: 1vh 0px 4vh 0px;
 				line-height: 1em;
 			}
 		}
@@ -350,8 +350,8 @@
 			width: 81.25vw;
 			display: block;
 			margin: auto;
-			margin-top: 12vw;
-			margin-bottom: 10vw;
+			margin-top: 8.4vh;
+			margin-bottom: 6.7vh;
 
 
 		}
