--- a/wp-content/themes/sixgill/less/tablet_products.less
+++ b/wp-content/themes/sixgill/less/tablet_products.less
@@ -23,7 +23,7 @@
 			width: 95.5%;
 		  align-items: center;
 			z-index: 2;
-			margin: 2.5vw 0px 2.5vw 0px;
+			margin: 2.5vh 0px 2.5vh 0px;
 
 			&-text {
 				width: 52.5%;
@@ -40,7 +40,7 @@
 			  font-weight: 300;
 				font-family: "Lato";
 				line-height: 1em;
-				margin-bottom: 2vw;
+				margin-bottom: 2vh;
 			}
 
 			&-paragraph p:last-child {
@@ -51,7 +51,7 @@
 		&-image {
 
 			&-wrapper {
-				max-height: 46.875vw;
+				max-height: 46.875vh;
 			}
 		}
 
@@ -80,8 +80,8 @@
 
 		&-image-wrapper {
 			width: 67%;
-			margin-bottom: 2.5vw;
-			margin-top: 2.5vw;
+			margin-bottom: 2.5vh;
+ 			margin-top: 2.5vh;
 		}
 
 		&-text {
@@ -121,8 +121,8 @@
 			width: 80%;
 			margin-left: auto;
 			margin-right: auto;
-			margin-top: 3vw;
-			margin-bottom: 1vw;
+			margin-top: 3vh;
+ 			margin-bottom: 1vh;
 		}
 
 		&-title {
@@ -145,7 +145,7 @@
 		}
 
 		&-line {
-			margin: 3vw 0px 3vw 0px;
+			margin: 3vh 0px 3vh 0px;
 			height: 2.5px;
 			width: 100%;
 			clear: both;
@@ -193,7 +193,7 @@
 			height: auto;
 			max-height: none;
 			width: 100%;
-			padding-top: 7.88vw;
+			padding-top: 7.88vh;
 		}
 
 		&-header-wrapper {
@@ -240,7 +240,7 @@
 		}
 
 		&-line {
-			margin: 3vw 0px 3vw 0px;
+			margin: 3vh 0px 3vh 0px;
 			height: 2.5px;
 			width: 100%;
 			clear: both;
@@ -278,13 +278,13 @@
 			width: 77%;
 			margin-left: auto;
 			margin-right: auto;
-			margin-top: 3vw;
-			margin-bottom: 1vw;
+			margin-top: 3vh;
+ 			margin-bottom: 1vh;
 		}
 
 		&-ico-wrapper {
 			width: 6.05vw;
-			height: 10.813vw;
+			height: 10.813vh;
 			margin-right: 1.4vw;
 			float: left;
 			display: inline-block;
@@ -319,7 +319,7 @@
 		}
 
 		&-line {
-			margin: 3vw 0px 3vw 0px;
+			margin: 3vh 0px 3vh 0px;
 			height: 2.5px;
 			width: 100%;
 			clear: both;
@@ -336,7 +336,7 @@
 
 	&-last-section {
 		min-height: inherit;
-		margin-bottom: 5.82vw;
+		margin-bottom: 5vh;
 
 		&-wrapper {
 			display: flex;
@@ -348,7 +348,7 @@
 			align-self: center;
 			display: flex;
 			width: 100%;
-			padding: 6.45vw 3.78vw 7.16vw 3.78vw;
+			padding: 5vh 3.78vw 7vh 3.78vw;
 			justify-content: space-between;
 		}
 
@@ -428,7 +428,7 @@
 			&-title {
 				font-size: 3.125vw;
 			  font-weight: 500;
-				margin: 2.74vw 0px 2.2vw 0px;
+				margin: 3vh 0px 3vh 0px;
 				line-height: 1em;
 			}
 
@@ -463,13 +463,13 @@
 			line-height: 1em;
 			display: inline-block;
 		  text-align: center;
-			margin: 4.6vw 0px 5vw 0px;
+			margin: 4vh 0px 0px 0px;
 			line-height: 1em;
 		}
 
 		&-icon-wrapper {
 			width: 3.9vw;
-			height: 5.2vw;
+			height: 5vh;
 			display: inline-block;
 			margin-right: 1.37vw;
 			float: left;
